CHANGES IN VERSION 0.5.2
------------------------
 o 

CHANGES IN VERSION 0.5.1
------------------------
 o Update vignette since TxDb's UCSC coordinates differ from those
   fetched from Ensembl via biomaRt. [2015-01-05 Mon]
 o Add `isCleaved` method. [2015-01-03 Sat]
 o Add `calculateHeavyLabels`; closes #6 and cleaver#5. [2015-01-03 Sat]

CHANGES IN VERSION 0.5.0
------------------------
 o Bump version for new Bioc release.

CHANGES IN VERSION 0.2.2
------------------------
 o Fix warning re undocumented '[' and siglist 'Proteins,ANY,ANY,ANY'
   [2014-10-03 Fri]

CHANGES IN VERSION 0.2.1
------------------------
 o Counting id files when adding [2014-09-17 Wed]

CHANGES IN VERSION 0.2.0
------------------------
 o support for mzID and mzR (new) to extract identification data from
   mzid files via addIdentificationData [2014-09-12 Fri]
 o support to add id data from > 1 mzid file [2014-09-12 Fri]
 o new Pparams parameter infrastructure [2014-09-13 Sat]

CHANGES IN VERSION 0.1.10
-------------------------
 o Allow spaces in GeneNames (GN) of fasta comments; fixes #7 [2014-09-13 Sat]

CHANGES IN VERSION 0.1.9
------------------------
 o Use BioStyle

CHANGES IN VERSION 0.1.8
------------------------
 o Using knit2html instead of rmarkdown::render since it is not yet
   available on the Bioc build servers [2014-07-24 Thu]

CHANGES IN VERSION 0.1.7
------------------------
 o export vignettes [2014-07-22 Tue]

CHANGES IN VERSION 0.1.6
------------------------
 o New mapping vignette [2014-07-17 Thu]
 o Raw MSMS data pms data [2014-07-17 Thu]

CHANGES IN VERSION 0.1.5
------------------------
 o new data object p and vignette [2014-07-15 Tue]

CHANGES IN VERSION 0.1.4
------------------------
 o Fixed issues with proteins without any identifications in
   addIdentification Data; see also rmEmptyRanges functions to remove
   such proteins [2014-07-14 Mon]

CHANGES IN VERSION 0.1.1
------------------------
 o add biocViews and update README [2014-06-09 Mon]
