@@ -8,7 +8,7 @@ Authors@R: c(person("Laurent", "Gatto", role = c("aut", "cre"),
                     email = "mail@sebastiangibb.de"))
 Depends: R (>= 2.10), methods, BiocGenerics, Rcpp, Gviz
 Imports: cleaver (>= 1.3.6), Biobase, Biostrings, IRanges, S4Vectors,
-	 mzID, mzR (>= 1.99.1), MSnbase (>= 1.13.5), Pviz
+	 mzID, mzR (>= 1.99.1), MSnbase (>= 1.15.5), Pviz
 Suggests: testthat (>= 0.8), ggplot2, BSgenome.Hsapiens.UCSC.hg19,
 	  biomaRt, TxDb.Hsapiens.UCSC.hg19.knownGene, knitr, BiocStyle
 Description: A set of classes and functions to investigate and
@@ -16,7 +16,7 @@ Description: A set of classes and functions to investigate and
              proteomics experiment.
 License: GPL-3
 Author: Laurent Gatto [aut], Sebastian Gibb [aut, cre]
-Maintainer: Sebastian Gibb <mail@sebastiangibb.de>, 
+Maintainer: Sebastian Gibb <mail@sebastiangibb.de>,
 	    Laurent Gatto <lg390@cam.ac.uk>
 VignetteBuilder: knitr
 URL: https://github.com/ComputationalProteomicsUnit/Pbase
